Prevent overflow of main

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ input {
 }
 
 main {
-  margin: 10px;
+  overflow: hidden;
+  padding: 10px;
 }
 
 .marking {
